Hong Kong SMM Followup - fix spacing

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -294,8 +294,8 @@ table.bg-black {
 
 .section-title
 {
-  margin-bottom: 7px;
   th.columns {
+    padding-bottom: 5px;
     th {
       padding-top: 7px;
       padding-bottom: 0;
